# VulkanFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Framework/: CMakeLists.txt
Framework/Utils/: Log.h
Framework/Window/: Input.h  Window.cpp  Window.h
samples/: CMakeLists.txt
samples/empty/: CMakeLists.txt  main.cpp
